autoencoder3 with gamma=0.8, botle d=10, better results

--- a/analog/mlquant.tex
+++ b/analog/mlquant.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 
-\title{ML quantisation of Vocoder Features}
+\title{ML quantisation of Codec 2 Vocoder Features}
 \maketitle
 
 The goal is to achieve improved quantisation of Codec 2 features using ML techniques, for example lower bit rate for equivalent distortion.
