fixed broken example to match text

--- a/analog/mlquant.tex
+++ b/analog/mlquant.tex
@@ -29,9 +29,9 @@ Planned experiments:
 
 \section{Experiment 1}
 
-A simple autoencoder network was designed consisting of 4 FC layers with a $tanh()$ non-linearity at the bottleneck.  The training material was dimension $k=20$ smoothed, unit energy, mel spaced log vectors $\mathbf{b}$.  Only one $\mathbf{b}$ vector was considered at a time (no time based transformations). When trained with a SD loss function \ref{eq:sd_loss} a dimension $d=10$ bottleneck was sufficient to maintain less than $1 dB^2$ distortion, indicating a useful dimension reduction.  Good results (based on visual inspection) were also obtained using a weighted linear loss function \ref{eq:wl_loss}.
+A simple autoencoder network was designed consisting of 4 FC layers with a $tanh()$ non-linearity at the bottleneck.  The training material was dimension $k=20$ smoothed, unit energy, mel spaced log vectors $\mathbf{b}$.  Only one $\mathbf{b}$ vector was considered at a time (no time based transformations). When trained with a SD loss function \ref{eq:sd_loss} a dimension $d=10$ there was a floor of around $1.3dB^2$ (larger than the target $1 dB^2$) distortion.  Reasonable results (based on visual inspection) were also obtained using a weighted linear loss function \ref{eq:wl_loss}.
 
-However it was unclear if the latent space was suitable for quantisation. To investigate this, a small amount of noise was added to simulate the effect of uniform quantisation over the $[-1,1]$ dynamic range of the $tanh$ function placed at the bottleneck.  This noise also encourages the network to converge on a latent space that behaves well in the presence of small quantisation errors.
+It was unclear if the latent space was suitable for quantisation. To investigate this, a small amount of noise was added to simulate the effect of uniform quantisation over the $[-1,1]$ dynamic range of the $tanh$ function placed at the bottleneck.  This noise also encourages the network to converge on a latent space that behaves well in the presence of small quantisation errors.
 
 Consider a uniform quantiser with $s$ discrete levels applied to the interval $[a,b]$.  The reconstruction levels are given by:
 \begin{equation}
@@ -122,12 +122,12 @@ As with the PCA results, the large slope of the first VQ stage (1-12 bits) sugge
 
 Informal listening tests using headphones and laptop speakers (see \emph{240118\_wav} folder described in \emph{README}):
 \begin{enumerate}
-\item In the male samples, there was a drop in quality due to the unquantised autoencoder with the buzzy artefact (typical of poor energy distribution across the pitch cycle) returning.  This suggests formant bandwidths are not encoded well.  The network and VQ was trained with the target of minimising MSE in the smoothed $\mathbf{b}$ log mel-spaced vectors, rather than the high resolution $\mathbf{y}$ vectors that contain the bandwidth information.
+\item In the male samples, there was a drop in quality due to the unquantised autoencoder with the buzzy artefact (typical of poor energy distribution across the pitch cycle) returning.  This was more noticeable through headphones than laptop speakers. This suggests formant bandwidths are not encoded well.  The network and VQ was trained with the target of minimising MSE in the smoothed $\mathbf{b}$ log mel-spaced vectors, rather than the high resolution $\mathbf{y}$ vectors that contain the bandwidth information.
 \item The 24 bit VQ of the bottleneck vectors worked quite well, with no obvious quality drop compared to the unquantised autoencoder.
 \item The unquantised autoencoder, VQ 12, and VQ 24 bit male samples were poorer than the reference Codec 2 3200 sample.
 \item With 12 bit VQ the males suffered a further drop in quality, but through a laptop speaker the female sample sounded noisey but otherwise quite acceptable.
 \end{enumerate} 
-So overall results were not satisfactory for a practical quantisation system, however this appears to be due to the autoencoder failing to encode formant bandwidths rather than VQ. The hybrid ML/VQ scheme does appear viable, suggested we have trained a ``well behaived" latent space that is amenable to quantisation. The use of ``old school" externally trained VQ was likely non-optimal but removed the need to deal with the many pitfalls of VQVAE \cite{mentzer2023finite}. The female results suggest low bit rates (12 bits/frame) may be possible if we can overcome the energy distribution issue.  However the buzzy artefacts for males suggests running the quantisation scheme on the smoothed $\mathbf{b}$ vectors may not be the best choice - we should perhaps make the target the high resolution $\mathbf{y}$ vectors.
+So overall results were not satisfactory for a practical quantisation system, however this appears to be due to autoencoder distortion rather than VQ. The hybrid ML/VQ scheme does appear viable, suggested we have trained a ``well behaived" latent space that is amenable to quantisation. The use of ``old school" externally trained VQ was likely non-optimal but removed the need to deal with the many pitfalls of VQVAE \cite{mentzer2023finite}. The female results suggest low bit rates (12 bits/frame) may be possible if we can overcome the energy distribution issue.  However the buzzy artefacts for males suggests running the quantisation scheme on the smoothed $\mathbf{b}$ vectors may not be the best choice - we should perhaps make the target the high resolution $\mathbf{y}$ vectors.
 
 \subsection{Weighted Linear Loss Function}
 
